# python-file-organizer

./: LICENSE  README.md  pyproject.toml  requirements.txt
config/: rules.json
examples/: after_tree.txt  before_tree.txt  sample_report.txt  teminal_demo.txt
scripts/: run_demo.py
src/file_organizer/: __init__.py  cli.py  organizer.py  reporting.py  rules.py  utils.py
tests/: test_organizer.py  test_reporting.py  test_rules.py
