[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-file-organizer"
version = "0.1.0"
description = "A command-line Python tool for organizing messy folders into clean category-based structures."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Gergely Pinke" }
]
license = { text = "MIT" }

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]